2004-10-10  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-window.c:
	- Removed yelp-history, using a simple stack in yelp-window

2004-10-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Fixed compilation problem

2004-10-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- A NULL check, and re-enabling the pager unreffing

	* src/yelp-window.c:
	- Fix for bug #146935: Previous, Next, and Contents were sensitive when
	  they shouldn't have been

2004-10-07  Shaun McCance  <shaunm@gnome.org>

	* data/ui/Makefile.am:
	* data/ui/yelp-ui.xml:
	* src/yelp-window.c:
	- Use the new menu API

2004-10-07  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- Using the toc.xml file as the base URI for x-yelp-toc, to please Gecko

2004-10-07  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/test-man-parser.c:
	* src/test-pager.c:
	* src/test-uri.c:
	* src/yelp-base.c:
	* src/yelp-base.h:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-error.h:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	* src/yelp-man-parser.c:
	* src/yelp-man-parser.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Switched most of the stuff over to YelpDocInfo
	- Reworked parser semantics to make it simpler
	- Broke lots of stuff

2004-09-30  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (parser_handle_linetag),
	(parser_handle_inline), (parser_append_text), (parser_append_node),
	(parser_stack_push_node), (parser_stack_pop_node),
	(parser_handle_table_options), (parser_handle_row_options),
	(parser_parse_table): Added more tags (from the gnu man macro 
	package) to the parser. Added basic parsing for the table (tbl) 