@@ -1,5 +1,11 @@
 2004-10-10  Shaun McCance  <shaunm@gnome.org>
 
+	* data/ui/yelp.glade:
+	* src/yelp-window.c:
+	- Open Location dialog
+
+2004-10-10  Shaun McCance  <shaunm@gnome.org>
+
 	* src/Makefile.am:
 	* src/yelp-history.c:
 	* src/yelp-history.h:
